// prisma/schema.prisma
datasource db {
  provider          = "mysql"
  url               = env("DB_APP_URL")
  shadowDatabaseUrl = env("SHADOW_DB_APP_URL")
}

generator client {
  provider = "prisma-client-js"
  output   = "../node_modules/.prisma/client"
}

// generator dbml {
//   provider = "prisma-dbml-generator"
//   output   = "../docs/db/generated"
// }

model User {
  id              Int      @id @default(autoincrement())
  avatarFileId    Int      @map("avatar_file_id")
  password        String?  @db.VarChar(255)
  firstName       String   @map("first_name") @db.VarChar(100)
  lastName        String?  @map("last_name") @db.VarChar(100)
  email           String   @unique(map: "uq_users_email") @db.VarChar(255)
  isEmailVerified Boolean  @default(false) @map("is_email_verified")
  createdAt       DateTime @default(now()) @map("created_at") @db.Timestamp(0)
  updatedAt       DateTime @default(now()) @updatedAt @map("updated_at") @db.Timestamp(0)

  // Relations
  avatarFile         File                @relation("UserAvatarFile", fields: [avatarFileId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  refreshTokenNonces RefreshTokenNonce[] @relation("UserRefreshTokens")
  authoredFiles      File[]              @relation("FileAuthor")
  externalAccounts   ExternalAccount[]   @relation("UserExternalAccounts")
  projects           Project[]           @relation("UserProjects")
  // fonts              Font[]               @relation("UserFonts")

  @@index([avatarFileId], map: "fk_users_avatar_file_id")
  @@map("users")
}

model RefreshTokenNonce {
  id        Int      @id @default(autoincrement())
  userId    Int      @map("user_id")
  nonce     String   @db.Char(32)
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamp(0)

  user User @relation("UserRefreshTokens", fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)

  @@index([userId], map: "fk_refresh_token_nonces_user_id")
  @@index([userId, nonce], map: "idx_refresh_token_nonces_user_id_nonce")
  @@map("refresh_token_nonces")
}

model ExternalAccount {
  id           Int                     @id @default(autoincrement())
  userId       Int                     @map("user_id")
  provider     ExternalAccountProvider @map("provider")
  accountId    String                  @map("account_id") @db.VarChar(255)
  avatarUrl    String?                 @map("avatar_url") @db.VarChar(255)
  refreshToken String?                 @map("refresh_token") @db.Text
  createdAt    DateTime                @default(now()) @map("created_at") @db.Timestamp(0)
  updatedAt    DateTime                @default(now()) @updatedAt @map("updated_at") @db.Timestamp(0)

  user User @relation("UserExternalAccounts", fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)

  @@unique([accountId, provider], map: "uq_external_accounts_account_id_provider")
  @@unique([userId, provider], map: "uq_external_accounts_user_id_provider")
  @@index([userId], map: "fk_external_accounts_user_id")
  @@map("external_accounts")
}

model File {
  id         Int            @id @default(autoincrement())
  authorId   Int?           @map("author_id")
  isDefault  Boolean        @default(false) @map("is_default")
  targetId   Int?           @map("target_id")
  targetType FileTargetType @map("target_type")
  fileKey    String         @unique(map: "uq_files_file_key") @map("file_key") @db.VarChar(100)
  mimeType   String         @map("mime_type") @db.VarChar(100)
  extension  String         @db.VarChar(10)
  createdAt  DateTime       @default(now()) @map("created_at") @db.Timestamp(0)
  updatedAt  DateTime       @default(now()) @updatedAt @map("updated_at") @db.Timestamp(0)
  deletedAt  DateTime?      @map("deleted_at") @db.Timestamp(0)

  author            User?     @relation("FileAuthor", fields: [authorId], references: [id], onDelete: SetNull, onUpdate: Cascade)
  userAvatars       User[]    @relation("UserAvatarFile")
  projectPreviewFor Project[] @relation("ProjectPreviewFile")

  @@index([authorId], map: "fk_files_author_id")
  @@map("files")
}

model Project {
  id            Int      @id @default(autoincrement())
  authorId      Int?     @map("author_id")
  previewFileId Int      @map("preview_file_id")
  isTemplate    Boolean  @default(false) @map("is_template")
  title         String   @db.VarChar(100)
  type          String   @db.VarChar(50)
  description   String?  @db.Text
  content       Json
  createdAt     DateTime @default(now()) @map("created_at") @db.Timestamp(0)
  updatedAt     DateTime @default(now()) @updatedAt @map("updated_at") @db.Timestamp(0)

  user        User? @relation("UserProjects", fields: [authorId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  previewFile File  @relation("ProjectPreviewFile", fields: [previewFileId], references: [id], onDelete: Restrict, onUpdate: Cascade)

  @@index([authorId], map: "fk_projects_author_id")
  @@index([authorId, title], map: "idx_projects_author_id_title")
  @@index([previewFileId], map: "idx_projects_preview_file_id")
  @@map("projects")
}

// model Font {
//   id        Int      @id @default(autoincrement())
//   userId    Int      @map("user_id")
//   fileId    Int      @unique(map: "uq_fk_fonts_file_id") @map("file_id")
//   title     String   @db.VarChar(100)
//   createdAt DateTime @default(now()) @map("created_at") @db.Timestamp(0)
//   updatedAt DateTime @default(now()) @updatedAt @map("updated_at") @db.Timestamp(0)

//   user User @relation("UserFonts", fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
//   file File @relation("FontFile", fields: [fileId], references: [id], onDelete: Restrict, onUpdate: Cascade)

//   @@index([userId], map: "fk_fonts_user_id")
//   @@index([userId, title], map: "idx_fonts_user_id_title")
//   @@map("fonts")
// }

enum FileTargetType {
  USER_AVATAR        @map("user_avatar")
  PROJECT_ASSET      @map("project_asset")
  PROJECT_PREVIEW    @map("project_preview")
  FONT_ASSET         @map("font_asset")
  PROJECT_BACKGROUND @map("project_background")
  PROJECT_ELEMENT    @map("project_element")
}

enum ExternalAccountProvider {
  GOOGLE @map("google")
}
