Table users {
  "id" INT [pk, increment]
  "avatar_file_id" INT [not null]
  "password" VARCHAR(255)
  "first_name" VARCHAR(100) [not null]
  "last_name" VARCHAR(100)
  "email" VARCHAR(255) [not null]
  "is_email_verified" BOOL [not null, default: false]
  "created_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    email [unique, name: "uq_users_email"]
    avatar_file_id [name: "fk_users_avatar_file_id"]
  }
}

Table refresh_token_nonces {
  "id" INT [pk, increment]
  "user_id" INT [not null]
  "nonce" CHAR(32) [not null]
  "created_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    user_id [name: "fk_refresh_token_nonces_user_id"]
    (user_id, nonce) [name: "idx_refresh_token_nonces_user_id_nonce"]
  }
}

Table external_accounts {
  "id" INT [pk, increment]
  "user_id" INT [not null]
  "provider" ENUM('google') [not null]
  "account_id" VARCHAR(255) [not null]
  "avatar_url" VARCHAR(255)
  "refresh_token" TEXT
  "created_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    user_id [name: "fk_external_accounts_user_id"]
    (account_id, provider) [unique, name: "uq_external_accounts_account_id_provider"]
    (user_id, provider) [unique, name: "uq_external_accounts_user_id_provider"]
  }
}

Table files {
  "id" INT [pk, increment]
  "author_id" INT
  "is_default" BOOL [not null, default: false]
  "target_id" INT
  "target_type" ENUM('user_avatar', 'project_asset', 'project_preview', 'project_background', 'project_element', 'font_asset') [not null]
  "file_key" VARCHAR(100) [not null]
  "mime_type" VARCHAR(100) [not null]
  "extension" VARCHAR(10) [not null]
  "created_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]
  "deleted_at" TIMESTAMP

  Indexes {
    author_id [name: "fk_files_author_id"]
    file_key [unique, name: "uq_files_file_key"]
  }
}

Table projects {
  "id" INT [pk, increment]
  "author_id" INT
  "preview_file_id" INT [not null]
  "is_template" BOOL [not null, default: false]
  "title" VARCHAR(100) [not null]
  "type" VARCHAR(50) [not null]
  "description" TEXT
  "content" JSON [not null]
  "created_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    author_id [name: "fk_projects_author_id"]
    preview_file_id [name: "fk_projects_preview_file_id"]
    (author_id, title) [name: "idx_projects_author_id_title"]
  }
}

Table fonts {
  "id" INT [pk, increment]
  "user_id" INT [not null]
  "file_id" INT [not null]
  "title" VARCHAR(100) [not null]
  "created_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    user_id [name: "fk_fonts_user_id"]
    file_id [unique, name: "uq_fk_fonts_file_id"]
    (user_id, title) [name: "idx_fonts_user_id_title"]
  }
}

Ref: "users"."id" < "refresh_token_nonces"."user_id" [delete: cascade]
Ref: "users"."id" < "projects"."author_id" [delete: cascade]
Ref: "users"."id" < "fonts"."user_id" [delete: cascade]
Ref: "users"."id" < "files"."author_id" [delete: set null]
Ref: "users"."id" < "external_accounts"."user_id" [delete: cascade]

Ref: "files"."id" < "users"."avatar_file_id" [delete: restrict]
Ref: "files"."id" < "fonts"."file_id" [delete: restrict]
Ref: "files"."id" < "projects"."preview_file_id" [delete: restrict]

